--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
             </nav>
         </div>
     </header>
+    <div class="separator"></div>
     <section id="about-me">
         <img src="resources/images/laby.jpg">
         <div class="text">
             <p id="name">Edison Raúl Barreiro Zambrano</p>
-            <p>Computational Engineering student from Ecuador.<br><br>
+            <p id="resumen">Computational Engineering student from Ecuador.<br><br>
                 Actively learning about web development and data science</p>
         </div>
+        <img id="desktop-img" src="resources/images/laby.jpg">
     </section>
     <script src="resources/js/mods.js"></script>
 </body>
