Add functionality to the menu buttons of all type of screen

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div>
             <nav>
                 <ul>
-                    <li>About Me</li>
-                    <li>Skills</li>
-                    <li>Portfolio</li>
-                    <li>Contact Me</li>
+                    <li class="about-me-btn">About Me</li>
+                    <li class="skills-btn">Skills</li>
+                    <li class="portfolio-btn">Portfolio</li>
+                    <li class="contact-me-btn">Contact Me</li>
                 </ul>
             </nav>
         </div>
@@ -34,10 +34,10 @@
             <h1>ERBZ</h1>        
             <nav>
                 <ul>
-                    <li>About Me</li>
-                    <li>Skills</li>
-                    <li>Portfolio</li>
-                    <li>Contact Me</li>
+                    <li class="about-me-btn">About Me</li>
+                    <li class="skills-btn">Skills</li>
+                    <li class="portfolio-btn">Portfolio</li>
+                    <li class="contact-me-btn">Contact Me</li>
                 </ul>
             </nav>
         </div>
@@ -51,6 +51,15 @@
                 Actively learning about web development and data science</p>
         </div>
         <img id="desktop-img" src="resources/images/laby.jpg">
+    </section>
+    <section id="skills" style="color:white;">
+        <p>skills</p>
+    </section>
+    <section id="portfolio" style="color: white;">
+        <p>projects</p>
+    </section>
+    <section id="contact-me" style="color:white;">
+        <p>contact me</p>
     </section>
     <script src="resources/js/mods.js"></script>
 </body>
